<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/all_ping"
        android:title="@string/menu_all_ping"
        android:icon="@drawable/ic_lightning_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/sub_update"
        android:title="@string/title_sub_update"
        android:icon="@drawable/ic_refresh_24dp"
        app:showAsAction="always" />
    <item
        android:id="@+id/per_app_proxy"
        android:title="@string/per_app_proxy_settings"
        android:icon="@drawable/ic_per_apps_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/routing_settings"
        android:title="@string/routing_settings_title"
        android:icon="@drawable/ic_routing_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/asset_settings"
        android:title="@string/title_user_asset_setting"
        android:icon="@drawable/ic_file_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/logcat"
        android:title="@string/title_logcat"
        android:icon="@drawable/ic_logcat_24dp"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:title="@string/title_settings"
        android:icon="@drawable/ic_settings_24dp"
        app:showAsAction="never" />
</menu>